--- a/main.html
+++ b/main.html
@@ -27,13 +27,13 @@
             <li><a class="a" title="Search For Startups" href="search.html"><span class="material-symbols-outlined">
                 search
                 </span></a></li>
-            <li><a class="a" title="Messages" href="#"><span class="material-symbols-outlined">
+            <li><a class="a" title="Messages" href="messages.html"><span class="material-symbols-outlined">
                 business_messages
                 </span></a></li>
-            <li><a class="a" title="Fellows" href="#"><span class="material-symbols-outlined">
+            <li><a class="a" title="Fellows" href="fellows.html"><span class="material-symbols-outlined">
                 diversity_1
                 </span></a></li>
-            <li><a class="a" title="Settings" href="#"><span class="material-symbols-outlined">
+            <li><a class="a" title="Settings" href="setting.html"><span class="material-symbols-outlined">
                 more_vert
                 </span></a></li>
             
